# demos

./: README.md
.github/workflows/: docker-image.yml  pr.yaml
canadarm/: package.xml
canadarm/launch/: canadarm.launch.py  canadarm_craftsman_search.launch.py
canadarm/nodes/: move_arm
canadarm/worlds/: lunar.world
canadarm2/: Dockerfile  Dockerfile.GUI  docker-compose.yml
canadarm2/canadarm_demo/: CMakeLists.txt
canadarm2/canadarm_demo/nodes/: move_arm
canadarm2/canadarm_description/: CMakeLists.txt
canadarm2/canadarm_description/models/config/: demo.rviz
canadarm2/canadarm_description/models/urdf/: SSRMS_Canadarm2.gazebo.xacro  SSRMS_Canadarm2.urdf.xacro
canadarm2/canadarm_gazebo/: CMakeLists.txt  package.xml
canadarm2/canadarm_gazebo/launch/: canadarm.launch.py
canadarm2/canadarm_gazebo/worlds/: simple.world
canadarm_moveit_config/: package.xml
canadarm_moveit_config/config/: SSRMS_Canadarm2.srdf
curiosity_rover/: Dockerfile  Dockerfile.GUI  docker-compose.yml
curiosity_rover/curiosity_description/: CMakeLists.txt
curiosity_rover/curiosity_description/models/config/: mars_rover_control.yaml
curiosity_rover/curiosity_description/models/urdf/: arm.xacro  chassis.xacro  curiosity_mars_rover.gazebo  left_wheel_group.xacro  right_wheel_group.xacro  sensor_mast.xacro  wheel.xacro
curiosity_rover/curiosity_gazebo/: CMakeLists.txt  package.xml
curiosity_rover/curiosity_gazebo/launch/: curiosity_gazebo.launch.py
curiosity_rover/curiosity_gazebo/worlds/: mars_curiosity.world
curiosity_rover/curiosity_rover_demo/: CMakeLists.txt
ingenuity_mars_helicopter/: Dockerfile  Dockerfile.GUI  README.md  docker-compose.yml
ingenuity_mars_helicopter/helicopter_flight_control/: CMakeLists.txt  README.md  package.xml
ingenuity_mars_helicopter/helicopter_flight_control/hooks/: helicopter_flight_control.sh.in
ingenuity_mars_helicopter/helicopter_flight_control/include/: helicopter_flight_control.hh
ingenuity_mars_helicopter/helicopter_flight_control/src/: helicopter_flight_control.cc
ingenuity_mars_helicopter/helicopter_flight_simulation/: CMakeLists.txt  README.md  package.xml
ingenuity_mars_helicopter/helicopter_flight_simulation/include/: helicopter_flight_simulation.hh
ingenuity_mars_helicopter/helicopter_flight_simulation/src/: helicopter_flight_simulation.cpp
ingenuity_mars_helicopter/ingenuity_bringup/: CMakeLists.txt  package.xml
ingenuity_mars_helicopter/ingenuity_bringup/config/: gz_ros2_bridge.yaml
ingenuity_mars_helicopter/ingenuity_bringup/launch/: ingenuity_demo.launch.py
ingenuity_mars_helicopter/ingenuity_demo/: CMakeLists.txt  package.xml
ingenuity_mars_helicopter/ingenuity_demo/config/: ingenuity_demo_bridge.yaml
ingenuity_mars_helicopter/ingenuity_demo/launch/: ingenuity_demo.launch.py
ingenuity_mars_helicopter/ingenuity_demo/nodes/: move_vertical  move_xy
ingenuity_mars_helicopter/ingenuity_description/: CMakeLists.txt  README.md
ingenuity_mars_helicopter/ingenuity_description/models/dust_storm/: model.config  model.sdf
ingenuity_mars_helicopter/ingenuity_description/models/ingenuity/: model.config  model.sdf
ingenuity_mars_helicopter/ingenuity_description/models/mars_tharsis/: model.config  model.sdf
ingenuity_mars_helicopter/ingenuity_description/rviz/: ingenuity_config.rviz
ingenuity_mars_helicopter/ingenuity_description/sdf/: ingenuity_world.sdf
ingenuity_mars_helicopter/ingenuity_description/urdf/: ingenuity_description.urdf
lunar_pole_exploration_rover/: Dockerfile  Dockerfile.GUI  README.md  demo_manual_pkgs.repos  docker-compose.yml
lunar_pole_exploration_rover/lunar_pole_exploration_rover_demo/: .package.xml.swp  CMakeLists.txt  package.xml
lunar_pole_exploration_rover/lunar_pole_exploration_rover_demo/launch/: lunar_pole_exploration_rover_demo.launch.py
lunar_pole_exploration_rover/lunar_pole_exploration_rover_demo/nodes/: run_demo
lunar_pole_exploration_rover/lunar_pole_exploration_rover_gazebo/: CMakeLists.txt  README.md  package.xml
lunar_pole_exploration_rover/lunar_pole_exploration_rover_gazebo/hooks/: lunar_pole_exploration_rover_gazebo.dsv.in
lunar_pole_exploration_rover/lunar_pole_exploration_rover_gazebo/launch/: lunar_pole_exploration_rover_gazebo.launch.py
lunar_pole_exploration_rover/lunar_pole_exploration_rover_gazebo/models/lunar_pole_exploration_rover/meshes/: body.dae  solar_panel_dark_blue.dae
lunar_pole_exploration_rover/lunar_pole_exploration_rover_gazebo/models/lunar_pole_exploration_rover/urdf/: chassis.xacro  lunar_pole_exploration_rover.gazebo  lunar_pole_exploration_rover.xacro  mast_head.xacro  wheel.xacro  wheel_assembly.xacro
lunar_pole_exploration_rover/lunar_pole_exploration_rover_gazebo/models/moon_mons_mouton/: model.sdf
lunar_pole_exploration_rover/lunar_pole_exploration_rover_gazebo/plugins/: RadioisotopeThermalGeneratorPlugin.cc  RadioisotopeThermalGeneratorPlugin.hh  RechargeableBatteryPlugin.cc  RechargeableBatteryPlugin.hh  SensorPowerSystemPlugin.cc  SensorPowerSystemPlugin.hh  SolarPanelPlugin.cc  SolarPanelPlugin.hh
lunar_pole_exploration_rover/lunar_pole_exploration_rover_gazebo/worlds/: lunar_pole.world
mars_rover/: package.xml
nav2_demo/: Dockerfile
racs2_demos_on_spaceros/: Dockerfile.RACS2  README.md  docker-compose.yml  run.sh  start_racs2_demo.sh
racs2_demos_on_spaceros/cFS/sample_defs/: cpu1_cfe_es_startup.scr  targets.cmake
racs2_demos_on_spaceros/curiosity_rover_demo/: CMakeLists.txt  package.xml
racs2_demos_on_spaceros/curiosity_rover_demo/launch/: mars_rover.launch.py
racs2_demos_on_spaceros/curiosity_rover_demo/nodes/: move_wheel
ros_trick/: README.md  build.sh  canadarm_ros_trick_demo.Dockerfile  docker-compose.yml  ros_trick_bridge.Dockerfile  run.sh  spaceros_docker_repo.patch
ros_trick/ros_src/canadarm_wrench_publisher/canadarm_wrench_publisher/: canadarm_wrench_publisher_node.py
ros_trick/ros_src/trick_ros2_control/src/: socket.cpp  (+1 more)
ros_trick/trick_src/SIM_trick_canadarm/: S_define  S_overrides.mk
space_robots/: Dockerfile  README.md
spaceros_gz_demos/spaceros_gz_demos/: CMakeLists.txt
(+18 files in other folders)
