<?xml version="1.0"?>
<package format="3">
  <name>helicopter_flight_simulation</name>
  <version>0.1.0</version>
  <description>Simulates the lift, drag and collective and cyclic controls of a helicopter</description>
  <maintainer email="baris.yazici@tum.de">Baris Yazici</maintainer>
  <author>Baris Yazici</author>
  <license>Apache 2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>ros_gz</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
